--- a/vignettes/Cellosaurus.Rmd
+++ b/vignettes/Cellosaurus.Rmd
@@ -73,7 +73,7 @@ This is the case if we query for "A549" in the same way.
 # our query:
 mapCell2Accession("A549", from = "id", numResults=1)
 
-# the standard name:
+# if we use the actual standard name:
 mapCell2Accession("A-549", from = "id", numResults=1)
 
 # trying to get the standard name with more results
@@ -81,7 +81,7 @@ mapCell2Accession("A549", from = "id", numResults=10)
 ```
 
 The main identifier for the A549 cell line is "A-549" with accesion id of "CVCL_0023" 
-which does not appear in even the first 10 results (note: it would be the 40th result 
+which does not appear in even the first 10 results (it would be the 40th result 
 if we adjust the `numResults` parameter) and while we could manually adjust every query 
 to match the standard name, this is not feasible for hundreds of cell lines. 
 
@@ -95,24 +95,24 @@ results based on the accession id of the parent cell line.
 mapCell2Accession("A549", from = "id", numResults=1, prioritizeParent=TRUE)
 ```
 
+Another example using the BT474 cell line. 
 
 ``` {r map BT474 each}
-mapCell2Accession("BT474", from = "id", numResults=1, prioritizeParent=TRUE)
+mapCell2Accession("BT474", numResults=1, prioritizeParent=FALSE)
+
+
+mapCell2Accession("BT474", numResults=1, prioritizeParent=TRUE)
 ```
 
 
 
 
 
-### Setup
+### Example pipeline to annotate a dataset
 We will be working with some data from the GDSC and Cell Model Passports datasets 
 for this vignette. The GDSC dataset contains information about the cell lines 
 in the Genomics of Drug Sensitivity in Cancer (GDSC) project. The Cell Model
 Passports dataset contains information about all the models in the the database.
-
-
-
-
 
 
 The GDSC sampleMetadata contains two columns, `GDSC.Sample_Name` and `GDSC.COSMIC_ID`.
@@ -122,7 +122,7 @@ data(cell_model_passports_models)
 ```
 
 ```{r view data}
-head(gdsc_sampleMetadata)
+# head(gdsc_sampleMetadata)
 
 ```
 
@@ -135,13 +135,13 @@ head(gdsc_sampleMetadata)
 
 
 ```{r view data2}
-head(cell_model_passports_models)
+# head(cell_model_passports_models)
 
 ```
 
 
 ```{r map one name to fields}
-fields <- c("id", "ac", "sy", "sx", "ag", "derived-from-site")
+# fields <- c("id", "ac", "sy", "sx", "ag", "derived-from-site")
 
 # By passing the fields argument, the function will return the information for the fields specified
 # AnnotationGx::mapCell2Accession(cell_model_passports_models[["CMP.model_name"]], to=fields) |> head()
