--- a/vignettes/PubChemAPI.Rmd
+++ b/vignettes/PubChemAPI.Rmd
@@ -53,6 +53,25 @@ The main function that is provided by the package is `mapCompound2CID`.
 mapCompound2CID("aspirin")
 ```
 
+You can pass in a list of compound names to get the CIDs for all of them at once.
+
+``` {r map multiple compounds to cid}
+drugs <- c("Erlotinib", "Acadesine", "Camptothecin", "Vincaleukoblastine",
+    "Cisplatin")
+
+mapCompound2CID(drugs)
+```
+
+It is possible for names to multimap to CIDs. This is the case for
+'Vincaleukoblastine' in the above query. In cases of multimapping, usually
+the first entry has the highest similarity to the requested drug. To subset
+to only the first occurrence of each of drug name:
+
+``` {r map multiple compounds to cid}
+mapCompound2CID(drugs, first = TRUE)
+```
+
+
 In the case of a compound that can't be mapped, `NA` will be returned and a warning will be issued.
 
 ``` {r map non existent compound to cid}
