--- a/vignettes/treatment_pipeline.Rmd
+++ b/vignettes/treatment_pipeline.Rmd
@@ -9,6 +9,8 @@ vignette: >
 
 # THIS VIGNETTE IS A WORK IN PROGRESS
 
+## This is an example Pipeline to annotate treatments from the CTRP dataset. 
+
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -18,15 +20,13 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(AnnotationGx)
+data(ctrp_treatmentIDs)
 ```
 
 ```{r mapCompounds to CID}
 
-data(ctrp_treatmentIDs)
-treatmentMetadata <- ctrp_treatmentIDs[1:5]
-treatmentMetadata
+treatmentMetadata <- ctrp_treatmentIDs[1:50]
 names_to_cids <- AnnotationGx::mapCompound2CID(treatmentMetadata$CTRP.treatmentid, first = TRUE) 
-
 
 ```
 
@@ -34,9 +34,21 @@ names_to_cids <- AnnotationGx::mapCompound2CID(treatmentMetadata$CTRP.treatmenti
 ```{r use CID in unichem}
 
 sources <- getUnichemSources()
+
+lapply(
+  names_to_cids[1:2, cids],
+  queryUnichem,
+  type = "sourceID", 
+  sourceID = sources[Name == "pubchem", SourceID]
+)
+
+
+```
+
+```{r use CID in unichem}
 response <- queryUnichem(
   type = "sourceID", 
-  compound = names_to_cids[1, cids], 
+  compound = names_to_cids[1:2, cids], 
   sourceID = sources[Name == "pubchem", SourceID]
 ) 
 
