Update AnnotationGx package: fix function names and update package documentation

--- a/inst/extdata/treatment_pipeline.Rmd
+++ b/inst/extdata/treatment_pipeline.Rmd
@@ -37,7 +37,7 @@ sources <- getUnichemSources()
 
 lapply(
   names_to_cids[1:2, cids],
-  queryUnichem,
+  queryUnichemCompound,
   type = "sourceID", 
   sourceID = sources[Name == "pubchem", SourceID]
 )
