--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "1. Introduction to AnnotationGx"
+title: "Introduction to AnnotationGx"
 author: 
   - name: Jermiah Joseph
     affiliation:
