Refactor string splitting functions

--- a/vignettes/Cellosaurus.Rmd
+++ b/vignettes/Cellosaurus.Rmd
@@ -64,7 +64,8 @@ will return the standard identifier `id` and the Cellosaurus accession ID `ac`. 
 function also returns two additional columns `query` and `query:<from>` which
 can be used to identify the original query and the original identifier type if needed. 
 ``` {r map heLa each}
-(result <- mapCell2Accession("hela", keep_duplicates = T))
+(result <- mapCell2Accession("hela", keep_duplicates = T, raw = F))
+result$hela -> resp
 ```
 
 
