--- a/data-raw/treatment_pipeline.Rmd
+++ b/data-raw/treatment_pipeline.Rmd
@@ -20,6 +20,8 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(AnnotationGx)
+library(data.table)
+options(mc.cores = parallel::detectCores())
 ```
 
 
@@ -33,95 +35,141 @@ Passports dataset contains information about all the models in the the database.
 
 
 The GDSC sampleMetadata contains two columns, `GDSC.Sample_Name` and `GDSC.COSMIC_ID`.
-``` {r setup data}
+``` {r setup_data}
 data(GDSC_sampleMetadata)
 data(gCSI_sampleMetadata)
 data(CTRP_sampleMetadata)
 data(CCLE_sampleMetadata)
-```
 
-``` {r setBPPARAM}
-BPPARAM = BiocParallel::MulticoreParam(progressbar=T)
+cell_lines_all <- data.table::fread("/home/bioinf/bhklab/jermiah/Bioconductor/AnnotationGx/inst/extdata/cell_annotation_all.csv")
+
 ```
 
 ``` {r view_GDSC_sampleMetadata}
 
 head(GDSC_sampleMetadata)
-<!-- 
-mapCell2Accession(
-  GDSC_sampleMetadata$GDSC.Sample_Name[1:300],
-  BPPARAM = BPPARAM
-) -->
+name <- GDSC_sampleMetadata$GDSC.Sample_Name
+keep_duplicates <- F
+result <- mapCell2Accession(
+  name
+  )
+GDSC_result <- result
+setnames(GDSC_result, "query", "GDSC.sampleid")
+GDSC_result
+
+data.table::fwrite(GDSC_result, "GDSC_result.csv")
 ```
+
+
 
 ``` {r view_gCSI_sampleMetadata}
 
 head(gCSI_sampleMetadata)
 
+name <- gCSI_sampleMetadata[["Characteristics.cell.line."]]
+keep_duplicates <- F
+result <- mapCell2Accession(
+  name
+  )
+gCSI_result <- result
+setnames(gCSI_result, "query", "gCSI.sampleid")
+
+print("Missing samples in gCSI")
+name <- gCSI_result[is.na(accession),unique(gCSI.sampleid)]
+result <- mapCell2Accession(name, fuzzy = T)
+setnames(result, "query", "gCSI.sampleid")
+gCSI_result <- data.table::rbindlist(
+  list(
+    unique(gCSI_result[!is.na(accession)]),
+    result
+  )
+) |> unique()
+
+gCSI_result
+data.table::fwrite(gCSI_result, "gCSI_result.csv")
 ```
 
-``` {r view_CTRP_sampleMetadata}
 
-head(CTRP_sampleMetadata)
+``` {r combine_gdsc_gcsi}
+
+
+merged <- unique(merge(gCSI_result, GDSC_result, c("cellLineName", "accession"), all = T))
+merged <- merged[order(cellLineName)]
+
+print("samples in gCSI that are NOT in GDSC")
+print(merged[is.na(GDSC.sampleid), unique(gCSI.sampleid)])
+
+print("samples in GDSC NOT in gCSI")
+print(merged[is.na(gCSI.sampleid), unique(GDSC.sampleid)])
+
+print("samples in both GDSC and gCSI")
+print(merged[!is.na(GDSC.sampleid) & !is.na(gCSI.sampleid),])
+
+
+
+subset_all <- cell_lines_all[, .(gCSI.cellid, GDSC_rnaseq.cellid,GDSC1000.cellid, Cellosaurus.Accession.id)]
+# remove any rows with all ""
+subset_all <- subset_all[gCSI.cellid != "" | GDSC_rnaseq.cellid != "" | GDSC1000.cellid != ""]
+names(subset_all) <- paste0("OLD_", names(subset_all))
+merged <- merge(merged, subset_all, by.x = "accession", by.y = "OLD_Cellosaurus.Accession.id", all.x = T)
+merged <- merged[order(cellLineName)]
+# new column order
+cols <- c("cellLineName", "accession", "gCSI.sampleid", "OLD_gCSI.cellid", "GDSC.sampleid", "OLD_GDSC_rnaseq.cellid", "OLD_GDSC1000.cellid")
+merged <- merged[, ..cols]
+data.table::fwrite(merged, "merged.csv")
+
 ```
 
-``` {r view_CCLE_sampleMetadata}
-
+``` {r ccle}
 head(CCLE_sampleMetadata)
-```
+CCLE_result <- mapCell2Accession(CCLE_sampleMetadata$CCLE_ID_parsed)
+CCLE_result
 
+CCLE_failed <- mapCell2Accession(CCLE_result[is.na(accession),query], fuzzy = T, parsed = F)
+CCLE_result <- data.table::rbindlist(
+  list(
+    unique(CCLE_result[!is.na(accession)]),
+    unique(CCLE_failed[!is.na(accession)])
+  )
+) |> unique()
 
-``` {r julia_mapping}
+CCLE_failed_again_names <- CCLE_failed[is.na(accession),query]
 
-mapping <- c("BT20" = "BT-20", "BT474" = "BT-474", "BT549" = "BT-549", "CAL120" = "CAL-120", "CAL148" = "CAL-148", 
-             "CAL51" = "CAL-51", "CAMA1" = "CAMA-1", "EFM19" = "EFM-19", "HDQP1" = "HDQ-P1", "HS578T" = "Hs 578T",
-             "JIMT1" = "JIMT-1", "KPL1" = "KPL-1", "LY2" = "MCF-7/LY2", "MCF7" = "MCF-7", "MDAMB157" = "MDA-MB-157",
-             "MDAMB175VII" = "MDA-MB-175-VII", "MDAMB231" = "MDA-MB-231", "MDAMB361" = "MDA-MB-361", 
-             "MDAMB436" = "MDA-MB-436", "MDAMB468" = "MDA-MB-468", "MX1" = "MX-1", "SKBR3" = "SK-BR-3", 
-             "SKBR5" = "SK-BR-5", "SKBR7" = "SK-BR-7", "SUM149" = "SUM149PT", "SUM159" = "SUM159PT", "T47D" = "T-47D",
-             "UACC812" = "UACC-812", "ZR751" = "ZR-75-1")
+depmapids <- na.omit(CCLE_sampleMetadata[CCLE_ID_parsed %in% CCLE_failed_again_names, depMapID])
+failed_depmaps <- mapCell2Accession(depmapids, from = "dr")
+failed_depmaps$query <- CCLE_sampleMetadata[match(depmapids, CCLE_sampleMetadata$depMapID), CCLE_ID_parsed]
+CCLE_result <- data.table::rbindlist(
+  list(
+    unique(CCLE_result[!is.na(accession)]),
+    unique(failed_depmaps[!is.na(accession)])
+  )
+) |> unique()
+CCLE_result[order(cellLineName)]
+missing <- setdiff(CCLE_sampleMetadata$CCLE_ID_parsed, CCLE_result$query)
+message("The following is still missing: ", missing)
 
-result <- mapCell2Accession(names(mapping))
+data.table::fwrite(CCLE_result, "CCLE_result.csv")
 
-setkeyv(result, "query")
-for(i in 1:length(mapping)){
-  if(mapping[[i]] !=  result[names(mapping)[i], "cellLineName"]){
-    print(sprintf("mapping failed. got: %s, expected: %s", result[names(mapping)[i], cellLineName], mapping[[i]]))
-  }
-}
-
-```
-
-
-``` {r testannato}
-cell_lines_all <- data.table::fread("/home/bioinf/bhklab/jermiah/Bioconductor/AnnotationGx/inst/extdata/cell_annotation_all.csv")
-setkeyv(test_dt, "unique.cellid")
-test_dt <- cell_lines_all[, .(unique.cellid, Cellosaurus.Accession.id, CCLE.cellid)]
-
-range <- 1:nrow(test_dt)
-result <- test_dt[range, mapCell2Accession(unique.cellid)]
-
-#merge  result["query"] on test_result["unique.cellid"] 
-test_dt <- merge(test_dt, result, by.x = "unique.cellid", by.y = "query", all.x = T)
-
-
-test_dt[!is.na(accession) & !is.na(Cellosaurus.Accession.id) & Cellosaurus.Accession.id != "" & Cellosaurus.Accession.id != accession]
-
-test_dt[
-  range & !is.na(Cellosaurus.Accession.id) & Cellosaurus.Accession.id != "" & Cellosaurus.Accession.id != accession, 
-  .(unique.cellid, Cellosaurus.Accession.id, accession, cellLineName)
-  ]
+depmapids_mapped <- mapCell2Accession(CCLE_sampleMetadata[!is.na(depMapID), depMapID], from = "dr")
+depmapids_mapped[order(cellLineName)]
+data.table::fwrite(depmapids_mapped, "CCLE_depmapids_mapped.csv")
 
 ```
 
 
+``` {r ctrp}
+head(CTRP_sampleMetadata)
 
-```  {r debug}
-da()
-mapCell2Accession("A-704", raw = F)
-mapCell2Accession("F5", raw = F, parsed = T, keep_duplicates = T) 
-name <- "F5"
-responses_dt[["cellLineName"]] %like% name
-responses_dt[matchNested("F5", responses_dt), ]
+CTRP_result <- mapCell2Accession(CTRP_sampleMetadata$ccl_name)
+
+CTRP_failed <- mapCell2Accession(CTRP_result[is.na(accession),query], fuzzy = T, parsed = F)
+
+CTRP_failed_again_names <- CTRP_failed[is.na(accession),query]
+
+message("The following is still missing: ", paste0(CTRP_failed_again_names, collapse = ", "))
+
+data.table::fwrite(CTRP_result, "CTRP_result.csv")
 
 ```
+
+
