--- a/data-raw/treatment_pipeline.Rmd
+++ b/data-raw/treatment_pipeline.Rmd
@@ -24,3 +24,107 @@ library(AnnotationGx)
 library(data.table)
 options(mc.cores = parallel::detectCores())
 ```
+
+```{r loadData}
+data(CCLE_treatmentMetadata)
+data(gCSI_treatmentMetadata)
+data(CTRP_treatmentMetadata)
+data(GDSC_treatmentMetadata)
+
+annotations_drugs_with_ids <- data.table::fread("/home/bioinf/bhklab/jermiah/Bioconductor/AnnotationGx/inst/extdata/drugs_with_ids.csv")
+
+
+```
+
+
+``` {r mapCCLE}
+(compounds_to_cids <- 
+  CCLE_treatmentMetadata[, 
+    AnnotationGx::mapCompound2CID(
+        names = cleanCharacterStrings(CCLE.treatmentid),
+        first = TRUE
+        )
+      ]
+    )
+data.table::setnames(compounds_to_cids, "name", "CCLE.treatmentid")
+properties <- c("Title", "MolecularFormula", "InChIKey", "MolecularWeight")
+
+cids_to_properties <- compounds_to_cids[, {
+  AnnotationGx::mapCID2Properties(
+    ids = cids,
+    properties = properties
+    )
+  }
+]
+
+CCLE_treatmentMetadata_annotated <- merge(
+  compounds_to_cids,
+  cids_to_properties,
+  by.x = "cids",
+  by.y = "CID",
+  all.x = TRUE
+)
+old_names <- c("cids", "MolecularFormula", "MolecularWeight", "InChIKey", "Title")
+
+data.table::setnames(CCLE_treatmentMetadata_annotated, old_names, paste0("PubChem.", old_names))
+
+```
+
+``` {r mapGCSI}
+(compounds_to_cids <- 
+  gCSI_treatmentMetadata[, 
+    AnnotationGx::mapCompound2CID(
+        names = cleanCharacterStrings(gCSI.treatmentid),
+        first = TRUE
+        )
+      ]
+)
+
+data.table::setnames(compounds_to_cids, "name", "gCSI.treatmentid")
+failed <- attributes(compounds_to_cids)$failed
+failed_drugs_gCSI <- names(failed)
+message("Failed to map the following drugs: ", paste(failed_drugs_gCSI, collapse = ", "))
+
+
+properties <- c("Title", "MolecularFormula", "InChIKey", "MolecularWeight")
+
+cids_to_properties <- compounds_to_cids[
+  !is.na(cids), 
+  {
+    AnnotationGx::mapCID2Properties(
+      ids = cids,
+      properties = properties
+      )
+  }
+]
+
+gCSI_treatmentMetadata_annotated <- merge(
+  compounds_to_cids,
+  cids_to_properties,
+  by.x = "cids",
+  by.y = "CID",
+  all.x = TRUE
+)
+
+old_names <- c("cids", "MolecularFormula", "MolecularWeight", "InChIKey", "Title")
+
+data.table::setnames(gCSI_treatmentMetadata_annotated, old_names, paste0("PubChem.", old_names))
+
+
+```
+
+
+``` {r mapCTRP}
+(compounds_to_cids <- 
+  CTRP_treatmentMetadata[, 
+    AnnotationGx::mapCompound2CID(
+        names =  CTRP.treatmentid,
+        first = TRUE
+        )
+      ]
+)
+failed <- 
+  attributes(compounds_to_cids)$failed |> 
+    names()
+failed
+```
