--- a/vignettes/articles/CTRP-Treatment-Annotation.Rmd
+++ b/vignettes/articles/CTRP-Treatment-Annotation.Rmd
@@ -7,12 +7,17 @@ title: "Annotating CTRP Treatments"
 This vignette compares annotating CTRP-provided treatment ids to PubChem CIDs and CTD information.
 
 Whereas the PubChem CID is a unique identifier for a compound, the PubChem API does not easily map 
-treatment names to CIDs, atleast not in a way that is easily scalable.
+treatment names to CIDs, atleast not in a way that easy for commonly misnamed treatments. 
+Specifically, for the **CTRP** treatment names (n=545), the PubChem API does not correctly map 
+all of them to PubChem CIDs.
 
-The [CTD2](https://ctd2-dashboard.nci.nih.gov/dashboard) database is the central database where CTRP 
+The [CTD2](https://ctd2-dashboard.nci.nih.gov/dashboard) database is the central database where **CTRP** 
 data is hosted. They happen to expose (an API)[https://ctd2-dashboard.nci.nih.gov/dashboard/#api-documentation] 
-for their database. The API calls they describe on their API documentation is useful, but they have an endpoint:
-`GET /compound/{compoundId}` that is not documented. This endpoint is useful for mapping compound names to CIDs.
+for their database. 
+
+Developer Note: The API calls they describe on their API documentation is useful, but they have an endpoint:
+`GET /compound/{compoundId}` that is not documented. This endpoint is useful for mapping compound names in the way
+their data (i.e CTRP) names them to PubChem CIDs.
 
 The functionality for this is implemented in the `mapCompound2CTD` function.
 
@@ -38,7 +43,7 @@ data(CTRP_treatmentMetadata)
 
 # get a random row from the CTRP_treatmentMetadata
 
-treatment <- CTRP_treatmentMetadata[sample(1:nrow(CTRP_treatmentMetadata), 1),CTRP.treatmentid]
+treatment <- CTRP_treatmentMetadata[1, CTRP.treatmentid]
 sprintf("CTRP treatment id : %s", treatment)
 
 # map the treatment to a CID using the CTD database
@@ -78,6 +83,7 @@ failed <-
   attributes(compounds_to_cids)$failed |> 
     names()
 ```
+
 
 
 ``` {r Pubchem Failed, eval = FALSE}
